JavaScript/glsl_es/GLSL_ESParser.js
// $ANTLR 3.3 Nov 30, 2010 12:50:56 GLSL_ES.g 2012-04-25 08:36:45

var GLSL_ESParser = function(input, state) {
    if (!state) {
        state = new org.antlr.runtime.RecognizerSharedState();
    }

    (function(){
    }).call(this);

    GLSL_ESParser.superclass.constructor.call(this, input, state);

    this.dfa4 = new GLSL_ESParser.DFA4(this);
    this.dfa17 = new GLSL_ESParser.DFA17(this);
    this.dfa19 = new GLSL_ESParser.DFA19(this);
    this.dfa41 = new GLSL_ESParser.DFA41(this);
    this.dfa48 = new GLSL_ESParser.DFA48(this);
    this.dfa50 = new GLSL_ESParser.DFA50(this);
    this.dfa55 = new GLSL_ESParser.DFA55(this);

         

    /* @todo only create adaptor if output=AST */
    this.adaptor = new org.antlr.runtime.tree.CommonTreeAdaptor();

};

org.antlr.lang.augmentObject(GLSL_ESParser, {
    EOF: -1,
    IDENTIFIER: 4,
    INTCONSTANT: 5,
    FLOATCONSTANT: 6,
    BOOLCONSTANT: 7,
    LEFT_PAREN: 8,
    RIGHT_PAREN: 9,
    LEFT_BRACKET: 10,
    RIGHT_BRACKET: 11,
    DOT: 12,
    INC_OP: 13,
    DEC_OP: 14,
    VOID: 15,
    COMMA: 16,
    FLOAT: 17,
    INT: 18,
    BOOL: 19,
    VEC2: 20,
    VEC3: 21,
    VEC4: 22,
    BVEC2: 23,
    BVEC3: 24,
    BVEC4: 25,
    IVEC2: 26,
    IVEC3: 27,
    IVEC4: 28,
    MAT2: 29,
    MAT3: 30,
    MAT4: 31,
    PLUS: 32,
    DASH: 33,
    BANG: 34,
    STAR: 35,
    SLASH: 36,
    LEFT_ANGLE: 37,
    RIGHT_ANGLE: 38,
    LE_OP: 39,
    GE_OP: 40,
    EQ_OP: 41,
    NE_OP: 42,
    AND_OP: 43,
    XOR_OP: 44,
    OR_OP: 45,
    QUESTION: 46,
    COLON: 47,
    EQUAL: 48,
    MUL_ASSIGN: 49,
    DIV_ASSIGN: 50,
    ADD_ASSIGN: 51,
    SUB_ASSIGN: 52,
    SEMICOLON: 53,
    PRECISION: 54,
    IN: 55,
    OUT: 56,
    INOUT: 57,
    INVARIANT: 58,
    CONST: 59,
    ATTRIBUTE: 60,
    VARYING: 61,
    UNIFORM: 62,
    SAMPLER2D: 63,
    SAMPLERCUBE: 64,
    HIGH_PRECISION: 65,
    MEDIUM_PRECISION: 66,
    LOW_PRECISION: 67,
    STRUCT: 68,
    LEFT_BRACE: 69,
    RIGHT_BRACE: 70,
    IF: 71,
    ELSE: 72,
    WHILE: 73,
    DO: 74,
    FOR: 75,
    CONTINUE: 76,
    BREAK: 77,
    RETURN: 78,
    DISCARD: 79,
    FALSE: 80,
    TRUE: 81,
    EXPONENT_PART: 82,
    DECIMAL_CONSTANT: 83,
    OCTAL_CONSTANT: 84,
    HEXDIGIT: 85,
    HEXADECIMAL_CONSTANT: 86,
    MOD_ASSIGN: 87,
    TILDE: 88,
    PERCENT: 89,
    VERTICAL_BAR: 90,
    CARET: 91,
    AMPERSAND: 92,
    WHITESPACE: 93,
    COMMENT: 94,
    MULTILINE_COMMENT: 95
});

(function(){
// public class variables
var EOF= -1,
    IDENTIFIER= 4,
    INTCONSTANT= 5,
    FLOATCONSTANT= 6,
    BOOLCONSTANT= 7,
    LEFT_PAREN= 8,
    RIGHT_PAREN= 9,
    LEFT_BRACKET= 10,
    RIGHT_BRACKET= 11,
    DOT= 12,
    INC_OP= 13,
    DEC_OP= 14,
    VOID= 15,
    COMMA= 16,
    FLOAT= 17,
    INT= 18,
    BOOL= 19,
    VEC2= 20,
    VEC3= 21,
    VEC4= 22,
    BVEC2= 23,
    BVEC3= 24,
    BVEC4= 25,
    IVEC2= 26,
    IVEC3= 27,
    IVEC4= 28,
    MAT2= 29,
    MAT3= 30,
    MAT4= 31,
    PLUS= 32,
    DASH= 33,
    BANG= 34,
    STAR= 35,
    SLASH= 36,
    LEFT_ANGLE= 37,
    RIGHT_ANGLE= 38,
    LE_OP= 39,
    GE_OP= 40,
    EQ_OP= 41,
    NE_OP= 42,
    AND_OP= 43,
    XOR_OP= 44,
    OR_OP= 45,
    QUESTION= 46,
    COLON= 47,
    EQUAL= 48,
    MUL_ASSIGN= 49,
    DIV_ASSIGN= 50,
    ADD_ASSIGN= 51,
    SUB_ASSIGN= 52,
    SEMICOLON= 53,
    PRECISION= 54,
    IN= 55,
    OUT= 56,
    INOUT= 57,
    INVARIANT= 58,
    CONST= 59,
    ATTRIBUTE= 60,
    VARYING= 61,
    UNIFORM= 62,
    SAMPLER2D= 63,
    SAMPLERCUBE= 64,
    HIGH_PRECISION= 65,
    MEDIUM_PRECISION= 66,
    LOW_PRECISION= 67,
    STRUCT= 68,
    LEFT_BRACE= 69,
    RIGHT_BRACE= 70,
    IF= 71,
    ELSE= 72,
    WHILE= 73,
    DO= 74,
    FOR= 75,
    CONTINUE= 76,
    BREAK= 77,
    RETURN= 78,
    DISCARD= 79,
    FALSE= 80,
    TRUE= 81,
    EXPONENT_PART= 82,
    DECIMAL_CONSTANT= 83,
    OCTAL_CONSTANT= 84,
    HEXDIGIT= 85,
    HEXADECIMAL_CONSTANT= 86,
    MOD_ASSIGN= 87,
    TILDE= 88,
    PERCENT= 89,
    VERTICAL_BAR= 90,
    CARET= 91,
    AMPERSAND= 92,
    WHITESPACE= 93,
    COMMENT= 94,
    MULTILINE_COMMENT= 95;

// public instance methods/vars
org.antlr.lang.extend(GLSL_ESParser, org.antlr.runtime.Parser, {
        
    setTreeAdaptor: function(adaptor) {
        this.adaptor = adaptor;
    },
    getTreeAdaptor: function() {
        return this.adaptor;
    },

    getTokenNames: function() { return GLSL_ESParser.tokenNames; },
    getGrammarFileName: function() { return "GLSL_ES.g"; }
});
org.antlr.lang.augmentObject(GLSL_ESParser.prototype, {

    // inline static return class
    translation_unit_return: (function() {
        GLSL_ESParser.translation_unit_return = function(){};
        org.antlr.lang.extend(GLSL_ESParser.translation_unit_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // GLSL_ES.g:44:1: translation_unit : ( external_declaration )* EOF ;
    // $ANTLR start "translation_unit"
    translation_unit: function() {
        var retval = new GLSL_ESParser.translation_unit_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var EOF2 = null;
         var external_declaration1 = null;

        var EOF2_tree=null;

        try {
            // GLSL_ES.g:45:3: ( ( external_declaration )* EOF )
            // GLSL_ES.g:45:5: ( external_declaration )* EOF
            root_0 = this.adaptor.nil();

            // GLSL_ES.g:45:5: ( external_declaration )*
            loop1:
            do {
                var alt1=2;
                var LA1_0 = this.input.LA(1);

                if ( (LA1_0==IDENTIFIER||LA1_0==VOID||(LA1_0>=FLOAT && LA1_0<=MAT4)||LA1_0==PRECISION||(LA1_0>=INVARIANT && LA1_0<=STRUCT)) ) {
                    alt1=1;
                }


                switch (alt1) {
                case 1 :
                    // GLSL_ES.g:45:7: external_declaration
                    this.pushFollow(GLSL_ESParser.FOLLOW_external_declaration_in_translation_unit60);
                    external_declaration1=this.external_declaration();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, external_declaration1.getTree());


                    break;

                default :
                    break loop1;
                }
            } while (true);

            EOF2=this.match(this.input,EOF,GLSL_ESParser.FOLLOW_EOF_in_translation_unit65); if (this.state.failed) return retval;
            if ( this.state.backtracking===0 ) {
            EOF2_tree = this.adaptor.create(EOF2);
            this.adaptor.addChild(root_0, EOF2_tree);
            }



            retval.stop = this.input.LT(-1);

            if ( this.state.backtracking===0 ) {

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    variable_identifier_return: (function() {
        GLSL_ESParser.variable_identifier_return = function(){};
        org.antlr.lang.extend(GLSL_ESParser.variable_identifier_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // GLSL_ES.g:48:1: variable_identifier : IDENTIFIER ;
    // $ANTLR start "variable_identifier"
    variable_identifier: function() {
        var retval = new GLSL_ESParser.variable_identifier_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var IDENTIFIER3 = null;

        var IDENTIFIER3_tree=null;

        try {
            // GLSL_ES.g:49:3: ( IDENTIFIER )
            // GLSL_ES.g:49:5: IDENTIFIER
            root_0 = this.adaptor.nil();

            IDENTIFIER3=this.match(this.input,IDENTIFIER,GLSL_ESParser.FOLLOW_IDENTIFIER_in_variable_identifier78); if (this.state.failed) return retval;
            if ( this.state.backtracking===0 ) {
            IDENTIFIER3_tree = this.adaptor.create(IDENTIFIER3);
            this.adaptor.addChild(root_0, IDENTIFIER3_tree);
            }



            retval.stop = this.input.LT(-1);

            if ( this.state.backtracking===0 ) {

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    primary_expression_return: (function() {
        GLSL_ESParser.primary_expression_return = function(){};
        org.antlr.lang.extend(GLSL_ESParser.primary_expression_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // GLSL_ES.g:52:1: primary_expression : ( INTCONSTANT | FLOATCONSTANT | BOOLCONSTANT | variable_identifier | LEFT_PAREN expression RIGHT_PAREN );
    // $ANTLR start "primary_expression"
    primary_expression: function() {
        var retval = new GLSL_ESParser.primary_expression_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var INTCONSTANT4 = null;
        var FLOATCONSTANT5 = null;
        var BOOLCONSTANT6 = null;
        var LEFT_PAREN8 = null;
        var RIGHT_PAREN10 = null;
         var variable_identifier7 = null;
         var expression9 = null;

        var INTCONSTANT4_tree=null;
        var FLOATCONSTANT5_tree=null;
        var BOOLCONSTANT6_tree=null;
        var LEFT_PAREN8_tree=null;
        var RIGHT_PAREN10_tree=null;

        try {
            // GLSL_ES.g:53:3: ( INTCONSTANT | FLOATCONSTANT | BOOLCONSTANT | variable_identifier | LEFT_PAREN expression RIGHT_PAREN )
            var alt2=5;
            switch ( this.input.LA(1) ) {
            case INTCONSTANT:
                alt2=1;
                break;
            case FLOATCONSTANT:
                alt2=2;
                break;
            case BOOLCONSTANT:
                alt2=3;
                break;
            case IDENTIFIER:
                alt2=4;
                break;
            case LEFT_PAREN:
                alt2=5;
                break;
            default:
                if (this.state.backtracking>0) {this.state.failed=true; return retval;}
                var nvae =
                    new org.antlr.runtime.NoViableAltException("", 2, 0, this.input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // GLSL_ES.g:53:5: INTCONSTANT
                    root_0 = this.adaptor.nil();

                    INTCONSTANT4=this.match(this.input,INTCONSTANT,GLSL_ESParser.FOLLOW_INTCONSTANT_in_primary_expression91); if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) {
                    INTCONSTANT4_tree = this.adaptor.create(INTCONSTANT4);
                    this.adaptor.addChild(root_0, INTCONSTANT4_tree);
                    }


                    break;
                case 2 :
                    // GLSL_ES.g:54:5: FLOATCONSTANT
                    root_0 = this.adaptor.nil();

                    FLOATCONSTANT5=this.match(this.input,FLOATCONSTANT,GLSL_ESParser.FOLLOW_FLOATCONSTANT_in_primary_expression97); if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) {
                    FLOATCONSTANT5_tree = this.adaptor.create(FLOATCONSTANT5);
                    this.adaptor.addChild(root_0, FLOATCONSTANT5_tree);
                    }


                    break;
                case 3 :
                    // GLSL_ES.g:55:5: BOOLCONSTANT
                    root_0 = this.adaptor.nil();

                    BOOLCONSTANT6=this.match(this.input,BOOLCONSTANT,GLSL_ESParser.FOLLOW_BOOLCONSTANT_in_primary_expression103); if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) {
                    BOOLCONSTANT6_tree = this.adaptor.create(BOOLCONSTANT6);
                    this.adaptor.addChild(root_0, BOOLCONSTANT6_tree);
                    }


                    break;
                case 4 :
                    // GLSL_ES.g:56:5: variable_identifier
                    root_0 = this.adaptor.nil();

                    this.pushFollow(GLSL_ESParser.FOLLOW_variable_identifier_in_primary_expression109);
                    variable_identifier7=this.variable_identifier();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, variable_identifier7.getTree());


                    break;
                case 5 :
                    // GLSL_ES.g:57:5: LEFT_PAREN expression RIGHT_PAREN
                    root_0 = this.adaptor.nil();

                    LEFT_PAREN8=this.match(this.input,LEFT_PAREN,GLSL_ESParser.FOLLOW_LEFT_PAREN_in_primary_expression115); if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) {
                    LEFT_PAREN8_tree = this.adaptor.create(LEFT_PAREN8);
                    this.adaptor.addChild(root_0, LEFT_PAREN8_tree);
                    }
                    this.pushFollow(GLSL_ESParser.FOLLOW_expression_in_primary_expression117);
                    expression9=this.expression();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, expression9.getTree());
                    RIGHT_PAREN10=this.match(this.input,RIGHT_PAREN,GLSL_ESParser.FOLLOW_RIGHT_PAREN_in_primary_expression119); if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) {
                    RIGHT_PAREN10_tree = this.adaptor.create(RIGHT_PAREN10);
                    this.adaptor.addChild(root_0, RIGHT_PAREN10_tree);
                    }


                    break;

            }
            retval.stop = this.input.LT(-1);

            if ( this.state.backtracking===0 ) {

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    postfix_expression_return: (function() {
        GLSL_ESParser.postfix_expression_return = function(){};
        org.antlr.lang.extend(GLSL_ESParser.postfix_expression_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),
